Bug 145804 - Wrong numbering style shown for predefined Heading styles
Summary: Wrong numbering style shown for predefined Heading styles
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Styles-Dialog
  Show dependency treegraph
 
Reported: 2021-11-21 03:02 UTC by Aron Budea
Modified: 2022-01-21 08:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2021-11-21 03:02:51 UTC
- In Writer, open the style dropdown on the toolbar, click the dropdown next to one of the Heading styles, and open Edit Style...
- Switch to Outline & Numbering tab.

=> The Numbering style picker incorrectly shows "Numbering ivx".

It's a bit hard to say what the expected entry would be, because before 6.1, it used to say "Outline Numbering", which doesn't actually exist as a predefined style, I'd assume it's coded somewhere.

Between 6.1 and 7.0 the dropdown would be empty, and now it shows "Numbering ivx", which is definitely not correct. Perhaps it could return to showing the hardcoded "Outline Numbering", though I wonder if defining it as an actual style would be an option down the line.

Observed using LO Version: 7.3.0.0.alpha1+ (fcad2503ede92b515076f9bb3162855dcc2c575d) / Ubuntu.

The two changes are below, bibisected using repo bibisect-linux-64-6.1 (the 6.1 backport of the change in 6.2, actually) and bibisect-linux-64-7.0 respectively. Adding CC: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=b78edeca8631a5e3b888d6fb357fe9125a491c41
author		Caolán McNamara <caolanm@redhat.com>	2018-10-01 20:20:51 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-11-21 22:08:47 +0100

"weld writer parastyle dialog"

https://cgit.freedesktop.org/libreoffice/core/commit/?id=bc0e0f633b05c4f91b6695488fc9e5c127507ba5
author		Caolán McNamara <caolanm@redhat.com>	2020-04-09 11:41:00 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-04-16 20:28:24 +0200

"tdf#131120 use a replacement for GtkComboBox"

In Windows this is a bit different, dunno why:
- in 6.2.0.3 it still says "Outline Numbering",
- in 6.3.0.4 it says "Chapter Numbering",
- since 6.4.0.3 it says "Chapter Number", but possibly because the rest is cut off, and this is all that fits in the dropdown (which got smaller).
Comment 1 Aron Budea 2021-11-22 04:08:49 UTC
The text in the dropdown should say "Chapter Numbering" since the following commit:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=7d49e64c2aad701d2903af8a451a31d90005d257

The other differences between Linux and Windows (also shown between gtk3 and gen rendering) is unrelated, and is tracked in bug 145821.

(In reply to Aron Budea from comment #0)
> It's a bit hard to say what the expected entry would be, because before 6.1,
> it used to say "Outline Numbering", which doesn't actually exist as a
> predefined style, I'd assume it's coded somewhere.
The explanation that I learned since is when numbering is controlled by chapter numbering set via Chapter Numbering, that's when this predefined entry is supposed to be shown in the otherwise disabled dropdown.
The tooltip also says: "This option is disabled when chapter numbering is assigned to a paragraph style."
Comment 2 Caolán McNamara 2021-11-23 16:34:43 UTC
what's happening here is that the code is adding "Chapter Numbering" to the combobox, selecting it, then removing it. Which is clearly unorthodox, and has various random results as other things change around the codebase.
Comment 3 Commit Notification 2021-11-23 19:43:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/88afa134df87119fb23793543a15c23432b94cb2

Resolves: tdf#145804 show "Chapter Numbering" as (uneditable) list style

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2021-11-23 19:45:28 UTC
I don't think there's a scenario where that combobox is enabled when the style is "Chapter Numbering" (or "Outline Numbering" as it used to be called)
Comment 5 Aron Budea 2021-11-24 01:34:24 UTC
Yeah, I only got to understand later that the text is a read-only indicator pointing to specific settings, and not something the user is supposed to be able to set.
Thanks, Caolán!