Resolves: tdf#145804 show "Chapter Numbering" as (uneditable) list style

Change-Id: I394d1e7d51a5008c1cc02e0c65df28df6acbe98c